# pyosc

./: .gitignore  .gitmodules  LICENSE  README.md  pyosc.func.maxpat
docs/: pyosc.maxhelp
legacy/: pyosc.obj.maxpat
maxosc/: README.md  setup.py
maxosc/maxosc/: Caller.py  Exceptions.py  MaxFormatter.py  MaxOsc.py  MaxOscLib.py  OscLogHandler.py  Parser.py  Sender.py  __init__.py  caller.py  exceptions.py  max_osc.py  maxformatter.py  maxosc.py  maxzmq.py  oscloghandler.py  parser.py  sender.py  zmq_formatter.py
maxosc/test/: legacy_max_tests.maxpat  legacy_max_tests.py  max_test_default.py  max_tests.maxpat  max_tests.py  test_caller.py  test_parser.py
pyosc/: CMakeLists.txt  pyosc.listwrap.maxpat
pyosc/docs/: py1.py  pyosc.agent.maxref.xml  pyosc.remote.maxref.xml  pyosc.server.maxref.xml  pyosc.test_receiver.maxref.xml  pyosc.test_sender.maxref.xml
pyosc/docs/refpages/: pyosc.maxref.xml
pyosc/help/: pyosc.hello-world.maxhelp  pyosc.maxhelp
pyosc/patchers/: pyosc.maxpat  pyosc.trigger.maxpat
pyosc/source/projects/pyosc.agent/: CMakeLists.txt  pyosc.agent_test.cpp
pyosc/source/projects/pyosc.argparse/: CMakeLists.txt  pyosc.argparse.cpp  pyosc.argparse_test.cpp
pyosc/source/projects/pyosc.pyosc/: CMakeLists.txt  pyosc.pyosc.cpp  pyosc.pyosc_test.cpp
pyosc/source/projects/pyosc.remote/: CMakeLists.txt  pyosc.remote.cpp  pyosc.remote_test.cpp
pyosc/source/projects/pyosc.server/: CMakeLists.txt  pyosc.server.cpp  pyosc.server_test.cpp
pyosc/source/projects/pyosc.server-to-be-removed/: CMakeLists.txt  pyosc.server-to-be-removed.cpp  pyosc.server_test.cpp
pyosc/source/projects/pyosc.switchsync/: CMakeLists.txt  pyosc.switchsync.cpp  pyosc.switchsync_test.cpp
pyosc/source/projects/pyosc.test_receiver/: CMakeLists.txt  pyosc.test_receiver.cpp
pyosc/source/projects/pyosc.test_sender/: CMakeLists.txt  pyosc.test_sender.cpp
pyosc/source/projects/pyosc.thread/: CMakeLists.txt  pyosc.thread.cpp  pyosc.thread_test.cpp
pyosc/source/projects/pyosc.thread-to-be-removed/: CMakeLists.txt  pyosc.thread-to-be-removed.cpp  pyosc.thread_test.cpp
pyosc/source/projects/shared/: CMakeLists.txt  agent_object.h  atom_osc_parser.h  base_object.h  connector.h  main.cpp  max_obj_base.h  osc_receiver.h  osc_send_message.h  oscpack_receiver.h  oscpack_sender.h  pyosc_base.cpp  pyosc_base.h  pyosc_manager.h  pyosc_objects.h  remote_object.h  text_gen.h
pyosc/source/projects/src/: CMakeLists.txt  agent_object.h  atom_osc_parser.h  base_pyosc_object.h  connector.h  juce_osc_input_stream.h  juce_osc_receiver.h  main.cpp  max_base.h  message_queue.h  oldMakeLists.txt  osc_send_message.h  oscpack_receiver.h  oscpack_sender.h  pyosc_base.cpp  pyosc_base.h  pyosc_manager.cpp  pyosc_manager.h  pyosc_max_base.h  pyosc_objects.h
