cmake_minimum_required(VERSION 3.15)


set(SOURCE_FILES
        max_obj_base.h
        )


#add_library(
#        pyosc
#        SHARED
#        ${SOURCE_FILES}
#)


#target_link_libraries(pyosc
#        PUBLIC
#        oscpack)
#
#target_include_directories(standalone PUBLIC
#        "${PROJECT_BINARY_DIR}"
#        "${PROJECT_SOURCE_DIR}/"
#        "${PROJECT_SOURCE_DIR}/source/oscpack/ip"
#        "${PROJECT_SOURCE_DIR}/source/oscpack/osc"
#        )


message("${PROJECT_SOURCE_DIR}/source/oscpack")
